packages/styles/scss/components/menu/_menu.scss
//
// Copyright IBM Corp. 2020
//
// This source code is licensed under the Apache-2.0 license found in the
// LICENSE file in the root directory of this source tree.
//

@use '../../config' as *;
@use '../../motion' as *;
@use '../../spacing' as *;
@use '../../theme' as *;
@use '../../type' as *;
@use '../button/tokens' as button-tokens;
@use '../../utilities/box-shadow' as *;
@use '../../utilities/focus-outline' as *;
@use '../../utilities/z-index' as *;
@use '../../utilities/convert' as *;

/// Menu styles
/// @access public
/// @group menu
@mixin menu {
  // Menu

  .#{$prefix}--menu {
    @include box-shadow;

    position: fixed;
    z-index: z('modal');
    min-width: 10rem;
    max-width: 18rem;
    padding: $spacing-02 0;
    background-color: $layer;
    opacity: 0;
    visibility: hidden;
  }

  .#{$prefix}--menu--with-icons {
    min-width: 12rem;
  }

  .#{$prefix}--menu--open {
    visibility: visible;

    &:focus {
      @include focus-outline('border');
    }
  }

  .#{$prefix}--menu:not(.#{$prefix}--menu--open) .#{$prefix}--menu--open {
    visibility: hidden;
  }

  .#{$prefix}--menu--shown {
    opacity: 1;
  }

  // MenuItem

  .#{$prefix}--menu-item {
    @include type-style('body-short-01');

    display: grid;
    height: 2rem;
    align-items: center;
    color: $text-primary;
    column-gap: $spacing-03;
    cursor: pointer;
    grid-template-columns: 0 1fr max-content;
    padding-inline: $spacing-05;
    transition: background-color $duration-fast-01 motion(standard, productive);

    &:focus {
      @include focus-outline('outline');
    }
  }

  .#{$prefix}--menu-item:hover {
    background-color: $layer-hover;
  }

  $supported-sizes: (
    'xs': 1.5rem,
    'sm': 2rem,
    'md': 2.5rem,
    'lg': 3rem,
  );

  @each $size, $value in $supported-sizes {
    .#{$prefix}--menu--#{$size} .#{$prefix}--menu-item {
      height: $value;
    }
  }

  .#{$prefix}--menu-item__icon {
    display: flex;
  }

  .#{$prefix}--menu-item__label {
    overflow: hidden;
    text-overflow: ellipsis;
    white-space: nowrap;
  }

  .#{$prefix}--menu--with-icons > .#{$prefix}--menu-item,
  .#{$prefix}--menu--with-icons
    > .#{$prefix}--menu-item-group
    > ul
    > .#{$prefix}--menu-item,
  .#{$prefix}--menu--with-icons
    > .#{$prefix}--menu-item-radio-group
    > ul
    > .#{$prefix}--menu-item {
    grid-template-columns: 1rem 1fr max-content;
  }

  .#{$prefix}--menu-item--disabled {
    color: $text-disabled;
    cursor: not-allowed;
  }

  .#{$prefix}--menu-item--disabled:hover {
    background-color: $layer;
  }

  .#{$prefix}--menu-item--danger:focus,
  .#{$prefix}--menu-item--danger:hover {
    background-color: button-tokens.$button-danger-primary;
    color: $text-on-color;
  }

  // MenuItemDivider

  .#{$prefix}--menu-item-divider {
    display: block;
    width: 100%;
    height: rem(1px);
    background-color: $border-subtle;
    margin-block: $spacing-02;
  }
}

