fix(menu): avoid column gap from empty icon grid cell

--- a/packages/styles/scss/components/menu/_menu.scss
+++ b/packages/styles/scss/components/menu/_menu.scss
@@ -66,7 +66,7 @@
     color: $text-primary;
     column-gap: $spacing-03;
     cursor: pointer;
-    grid-template-columns: 0 1fr max-content;
+    grid-template-columns: 1fr max-content;
     padding-inline: $spacing-05;
     transition: background-color $duration-fast-01 motion(standard, productive);
 
@@ -93,6 +93,10 @@
   }
 
   .#{$prefix}--menu-item__icon {
+    display: none;
+  }
+
+  .#{$prefix}--menu--with-icons .#{$prefix}--menu-item__icon {
     display: flex;
   }
 
